feat: add individual play history API
